@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19931201
+MANIFEST for ded, version t19931202
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
